--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"description": "API project for freeCodeCamp",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
 		"express": "^5.0.0-alpha.2",
-		"cors": "^2.8.1",
-		"dotenv": "^8.2.0"
+		"nodemon": "^2.0.15"
 	},
 	"repository": {
 		"type": "git",
